--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,5 @@
 ---
 ---
-<div>
-<p>Footer - tilføj footerindhold</p>
-</div>
-  
+<div class="mt-4 text-center">
+    <p class="text-sm text-gray-300">&copy; 2024 Company Name. All rights reserved.</p>
+  </div>
