--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -494,14 +494,14 @@ import Illustrator from "../assets/images/Illustrator.png";
 
 
     <!-- moodboard -->
-    <section class="flex relative justify-center items-center min-h-screen">
+    <section id="Inspiration" class="flex relative justify-center items-center min-h-screen -mt-32">
       <div class="relative w-full max-w-7xl mx-auto p-6">
           
         <!-- text -->
         <div class="relative flex items-center justify-center">
 
           <div class="absolute z-20 transform translate-x-80 -translate-y-40">
-            <Image loading="lazy" src={moodboard4} alt="moodboard" class="object-contain opacity-85" />
+            <Image loading="lazy" src={moodboard4} alt="moodboard" class="object-contain opacity-85 border border-orange-500" />
           </div>
 
           <div class="absolute z-0 transform -translate-x-28 -translate-y-36">
@@ -514,7 +514,7 @@ import Illustrator from "../assets/images/Illustrator.png";
           </div>
         
           <div class="absolute z-20 transform translate-x-14 translate-y-28">
-            <Image loading="lazy" src={moodboard1} alt="Foreground Image" class="object-cover w-1/5 opacity-80" />
+            <Image loading="lazy" src={moodboard1} alt="Foreground Image" class="object-cover w-1/5 opacity-80 border border-orange-500" />
           </div>
            <!-- Inspiration Text -->
         <div class="absolute z-20 transform translate-x-14 translate-y-56">
@@ -529,7 +529,7 @@ import Illustrator from "../assets/images/Illustrator.png";
     
   
 <!-- Design -->
- <section class="p-12">
+ <section class="p-12 max-w-screen-lg m-auto">
 <Image loading="lazy" src={Illustrator} alt="Illustrator" class="" />
 </section>
 
