--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,8 +32,8 @@ import Logo from "../assets/images/spark.svg";
         <ul class="flex flex-row gap-10">
          
           <li>
-            <Link size="small" variant="textlink" href="#Moodboard"
-              >Moodboard</Link
+            <Link size="small" variant="textlink" href="#Inspiration"
+              >Inspiration</Link
             >
           </li>
           <li>
@@ -76,8 +76,8 @@ import Logo from "../assets/images/spark.svg";
      
       
         <li class="pb-3">
-          <Link size="small" variant="textlink" href="#Moodboard"
-            >Moodboard</Link
+          <Link size="small" variant="textlink" href="#Inspiration"
+            >Inspiration</Link
           >
         </li>
         <li class="pb-3">
