--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,7 @@ import Book1 from "../assets/images/BOOK2.webp";
 
 
           <!-- Inspiration Text -->
-          <div class="md:absolute md:z-20 transform md:translate-x-14 md:translate-y-56">
+          <div class="md:absolute md:z-20 transform md:translate-x-14 md:translate-y-72">
             <h2 class="font-thin mb-4">Hvad inspirerede SPARK</h2>
             <!-- gemt i fuldskærm -->
             <Image
@@ -128,7 +128,7 @@ import Book1 from "../assets/images/BOOK2.webp";
             alt="moodboard"
             class="object-contain block md:hidden pb-6"
           />
-            <p class="leading-relaxed max-w-2xl text-base font-thin	">
+            <p class="leading-relaxed max-w-2xl font-thin	">
               Den kantede font blev til, med inspiration fra det
               rå og kantede univers, samtidig med at jeg var
               fascineret af <span class="font-black">højkontrasterede</span> designs, som skaber en stærk visuel
@@ -163,7 +163,7 @@ import Book1 from "../assets/images/BOOK2.webp";
 
     <!-- Book -->
     <div
-      class="flex md:flex-row flex-col md:p-22 p-2 md:-mt-18 mt-2 items-center"
+      class="flex md:flex-row flex-col md:p-22 p-2 md:mt-28 mt-2 items-center"
     >
     <div class="w-96 mx-32 ">
     <h2 class="font-thin">Den Perfekte font</h3>
@@ -221,7 +221,7 @@ import Book1 from "../assets/images/BOOK2.webp";
           ></path>
         </svg>
 
-        <p class="text-white italic">
+        <p class="text-white font-light italic">
           Spark er inspireret af  den følelse man får når man bliver inspireret kreativt, når det sitre helt ud i fingrene.
         </p>
       </div>
@@ -261,7 +261,7 @@ import Book1 from "../assets/images/BOOK2.webp";
           ></path>
         </svg>
 
-        <p class="text-[#0F0E0E] italic">
+        <p class="text-[#0F0E0E] font-light italic">
           Spark er inspireret af  den følelse man får når man bliver inspireret kreativt, når det sitre helt ud i fingrene.
         </p>
       </div>
@@ -301,7 +301,7 @@ import Book1 from "../assets/images/BOOK2.webp";
           ></path>
         </svg>
 
-        <p class="text-[#004C8C] italic">
+        <p class="text-[#004C8C] font-light italic">
           Spark er inspireret af  den følelse man får når man bliver inspireret kreativt, når det sitre helt ud i fingrene.
         </p>
       </div>
