--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ import Book1 from "../assets/images/BOOK2.webp";
       <div class="relative w-full max-w-7xl mx-auto p-6">
         <!-- text -->
         <div class="md:relative md:flex items-center mt-40 justify-center">
-          <div class="md:absolute md:z-20 transform md:translate-x-80 md:-translate-y-40 md:block hidden">
+          <div class="md:absolute md:z-20 transform md:translate-x-96 md:-translate-y-40 md:block hidden">
             <Image
               loading="lazy"
               src={moodboard4}
@@ -87,7 +87,7 @@ import Book1 from "../assets/images/BOOK2.webp";
             />
           </div>
 
-          <div class="md:absolute z-0 transform md:-translate-x-28 md:-translate-y-36 md:block hidden">
+          <div class="md:absolute z-0 transform md:-translate-x-32 md:-translate-y-36 md:block hidden">
             <Image
               loading="lazy"
               src={moodboard2}
@@ -106,7 +106,7 @@ import Book1 from "../assets/images/BOOK2.webp";
             />
           </div>
 
-          <div class="absolute md:z-20 transform md:translate-x-14 md:translate-y-28 md:block hidden">
+          <div class="absolute md:z-20 transform md:-translate-x-20 md:translate-y-28 md:block hidden">
             <Image
               loading="lazy"
               src={moodboard1}
@@ -131,7 +131,7 @@ import Book1 from "../assets/images/BOOK2.webp";
             <p class="leading-relaxed max-w-2xl font-thin	">
               Den kantede font blev til, med inspiration fra det
               rå og kantede univers, samtidig med at jeg var
-              fascineret af <span class="font-black">højkontrasterede</span> designs, som skaber en stærk visuel
+              fascineret af <span class="font-medium">højkontrasterede</span> designs, som skaber en stærk visuel
               effekt. Jeg ønskede at finde en balance mellem disse elementer, så
               jeg besluttede at kombinere den kantede og strukturerede stil med
               en enkel, tynd streg. Dette valg gav mig mulighed for at skabe et
@@ -170,7 +170,7 @@ import Book1 from "../assets/images/BOOK2.webp";
       <p class="font-thin	">
         Denne font er ideel til <span class="text-xl font-normal text-[#F16D41]"> overskrifter og titler i store editoriale
           formater</span> , hvor dens markante stil skaber et stærkt visuelt blikfang. Med
-        sit moderne og <span class="italic font-semibold">elegante udtryk </span> er fonten perfekt til coffee table-bøger
+        sit moderne og <span class="italic font-medium">elegante udtryk </span> er fonten perfekt til coffee table-bøger
         inden for emner som design, kunst, arkitektur og mode. Her kan
         typografien være med til at understrege bogens æstetiske og konceptuelle
         budskab.
