--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Book1 from "../assets/images/BOOK2.webp";
 <MainLayout title="SPARK">
   <article>
     <div
-      class="progress-bar z-40 h-4 fixed w-full bg-gradient-to-r from-stone-300 to-stone-200 left-0 origin-top-left top-0 right-0"
+      class="progress-bar z-40 h-2 fixed w-full bg-gradient-to-r from-stone-200 to-orange-500 left-0 origin-top-left top-0 right-0"
     >
     </div>
 
@@ -168,7 +168,7 @@ import Book1 from "../assets/images/BOOK2.webp";
     <div class="w-96 mx-32 ">
     <h2 class="font-thin">Den Perfekte font</h3>
       <p class="font-thin	">
-        Denne font er ideel til <span class="text-xl font-normal text-[#F16D41]"> overskrifter og titler i store editoriale
+        Denne font er ideel til <span class="text-xl font-normal text-[#F16D41]"> overskrifter og titler i store redaktionel
           formater</span> , hvor dens markante stil skaber et stærkt visuelt blikfang. Med
         sit moderne og <span class="italic font-medium">elegante udtryk </span> er fonten perfekt til coffee table-bøger
         inden for emner som design, kunst, arkitektur og mode. Her kan
@@ -222,7 +222,8 @@ import Book1 from "../assets/images/BOOK2.webp";
         </svg>
 
         <p class="text-white font-light italic">
-          Spark er inspireret af  den følelse man får når man bliver inspireret kreativt, når det sitre helt ud i fingrene.
+        
+"Spark" er den følelse, der får det til at sitre helt ud i fingerspidserne.
         </p>
       </div>
 
@@ -262,7 +263,7 @@ import Book1 from "../assets/images/BOOK2.webp";
         </svg>
 
         <p class="text-[#0F0E0E] font-light italic">
-          Spark er inspireret af  den følelse man får når man bliver inspireret kreativt, når det sitre helt ud i fingrene.
+          "Spark" er den følelse, der opstår, når inspirationen rammer.
         </p>
       </div>
 
@@ -302,7 +303,7 @@ import Book1 from "../assets/images/BOOK2.webp";
         </svg>
 
         <p class="text-[#004C8C] font-light italic">
-          Spark er inspireret af  den følelse man får når man bliver inspireret kreativt, når det sitre helt ud i fingrene.
+          "Spark" er den følelse, der opstår, når billede og tekst går op i en højere enhed.
         </p>
       </div>
     </section>
