--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
 ---
 <div class="mt-4 text-center">
-    <p class="text-sm text-gray-300">&copy; 2024 Company Name. All rights reserved.</p>
+    <p class="text-lg font-thin italic text-orange-500">&copy; 2024 Thea Frese Ekstrøm</p>
   </div>
