--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,7 +83,7 @@ import Book1 from "../assets/images/BOOK2.webp";
               loading="lazy"
               src={moodboard4}
               alt="moodboard"
-              class="object-contain opacity-85 border border-orange-500"
+              class="object-contain opacity-90 border border-orange-500"
             />
           </div>
 
@@ -111,7 +111,7 @@ import Book1 from "../assets/images/BOOK2.webp";
               loading="lazy"
               src={moodboard1}
               alt="Foreground Image"
-              class="object-cover w-1/5 opacity-80 border border-orange-500"
+              class="object-cover w-1/5 opacity-60 "
             />
           </div>
 
