--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -128,7 +128,7 @@ import Book1 from "../assets/images/BOOK2.webp";
             alt="moodboard"
             class="object-contain block md:hidden pb-6"
           />
-            <p class="leading-relaxed max-w-2xl font-thin	">
+            <p class="leading-relaxed max-w-2xl font-light	">
               Den kantede font blev til, med inspiration fra det
               rå og kantede univers, samtidig med at jeg var
               fascineret af <span class="font-medium">højkontrasterede</span> designs, som skaber en stærk visuel
@@ -167,7 +167,7 @@ import Book1 from "../assets/images/BOOK2.webp";
     >
     <div class="w-96 mx-32 ">
     <h2 class="font-thin">Den Perfekte font</h3>
-      <p class="font-thin	">
+      <p class="font-light">
         Denne font er ideel til <span class="text-xl font-normal text-[#F16D41]"> overskrifter og titler i store redaktionel
           formater</span> , hvor dens markante stil skaber et stærkt visuelt blikfang. Med
         sit moderne og <span class="italic font-medium">elegante udtryk </span> er fonten perfekt til coffee table-bøger
