--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -120,7 +120,7 @@ import Book1 from "../assets/images/BOOK2.webp";
 
           <!-- Inspiration Text -->
           <div class="md:absolute md:z-20 transform md:translate-x-14 md:translate-y-72">
-            <h2 class="font-thin mb-4">Hvad inspirerede SPARK</h2>
+            <h2 class="font-light mb-4">Hvad inspirerede SPARK</h2>
             <!-- gemt i fuldskærm -->
             <Image
             loading="lazy"
@@ -166,7 +166,7 @@ import Book1 from "../assets/images/BOOK2.webp";
       class="flex md:flex-row flex-col md:p-22 p-2 md:mt-28 mt-2 items-center"
     >
     <div class="w-96 mx-32 ">
-    <h2 class="font-thin">Den Perfekte font</h3>
+    <h2 class="font-light">Den Perfekte font</h3>
       <p class="font-light">
         Denne font er ideel til <span class="text-xl font-normal text-[#F16D41]"> overskrifter og titler i store redaktionel
           formater</span> , hvor dens markante stil skaber et stærkt visuelt blikfang. Med
